--- a/homme.html
+++ b/homme.html
@@ -63,7 +63,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="Jadore.html">J'adore</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="MissDior.html">Miss Dior</a>
+                                <a class="dropdown-item" href="missdior.html">Miss Dior</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -72,21 +72,21 @@
                                 男性香氛
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="sauvage.html">Sauvage</a>
+                                <a class="dropdown-item" href="./sauvage.html">Sauvage</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="homme.html">Dior Homme</a>
                             </div>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                香氛簡介
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">J'adore</a>
-                                <a class="dropdown-item" href="#">Miss Dior</a>
-                                <a class="dropdown-item" href="#">Sauvage</a>
-                                <a class="dropdown-item" href="#">Dior Homme</a>
-                        </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="allproduct.html" id="navbarDropdown" role="button"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    香氛簡介
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="allproduct.html#mark-1">Sauvage</a>
+                                    <a class="dropdown-item" href="allproduct.html#mark-2">Dior Homme</a>
+                                    <a class="dropdown-item" href="allproduct.html#mark-3">Miss Dior</a>
+                                    <a class="dropdown-item" href="allproduct.html#mark-4">J'adore</a>
+                            </li>
                         <li class="nav-item" style="margin:0 7px">
                             <a class="nav-link" href="#">會員資料</a>
                         </li>
