--- a/product10.html
+++ b/product10.html
@@ -66,7 +66,7 @@
                                 女性香氛
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="jadore.html">J'adore</a>
+                                <a class="dropdown-item" href="Jadore.html">J'adore</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="missdior.html">Miss Dior</a>
                             </div>
@@ -77,26 +77,26 @@
                                 男性香氛
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="sauvage.html">Sauvage</a>
+                                <a class="dropdown-item" href="./sauvage.html">Sauvage</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="homme.html">Dior Homme</a>
                             </div>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                香氛簡介
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="jadore.html">J'adore</a>
-                                <a class="dropdown-item" href="missdior.html">Miss Dior</a>
-                                <a class="dropdown-item" href="sauvage.html">Sauvage</a>
-                                <a class="dropdown-item" href="homme.html">Dior Homme</a>
-                        </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="allproduct.html" id="navbarDropdown" role="button"
+                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    香氛簡介
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="allproduct.html#mark-1">Sauvage</a>
+                                    <a class="dropdown-item" href="allproduct.html#mark-2">Dior Homme</a>
+                                    <a class="dropdown-item" href="allproduct.html#mark-3">Miss Dior</a>
+                                    <a class="dropdown-item" href="allproduct.html#mark-4">J'adore</a>
+                            </li>
                         <li class="nav-item" style="margin:0 7px">
                             <a class="nav-link" href="#">會員資料</a>
                         </li>
                         <li class="nav-item" style="margin:0 7px">
-                            <a class="nav-link" href="./about_us.html">關於我們</a>
+                            <a class="nav-link" href="about_us.html">關於我們</a>
                         </li>
                     </ul>
 
@@ -108,7 +108,7 @@
                         </button>
                         <a href=#><i class="far fa-heart"></i></a>
                         <a href=#><i class="fas fa-shopping-cart"></i></a>
-                        <a href=user.html><i class="fa-solid fa-user"></i></i></a>
+                        <a href=user.html><i class="fa-solid fa-user"></i></a>
                     </form>
                 </div>
             </nav>
