--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                                 女性香氛
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">J'adore</a>
+                                <a class="dropdown-item" href="Jadore.html">J'adore</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Miss Dior</a>
+                                <a class="dropdown-item" href="missdior.html">Miss Dior</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
@@ -70,7 +70,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="./sauvage.html">Sauvage</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Dior Homme</a>
+                                <a class="dropdown-item" href="homme.html">Dior Homme</a>
                             </div>
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle" href="allproduct.html" id="navbarDropdown" role="button"
@@ -87,7 +87,7 @@
                             <a class="nav-link" href="#">會員資料</a>
                         </li>
                         <li class="nav-item" style="margin:0 7px">
-                            <a class="nav-link" href="#">關於我們</a>
+                            <a class="nav-link" href="about_us.html">關於我們</a>
                         </li>
                     </ul>
 
