--- a/Jadore.html
+++ b/Jadore.html
@@ -46,7 +46,7 @@
     <header>
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#"><img src="picture/dior.png"></a>
+                <a class="navbar-brand" href="index.html"><img src="picture/dior.png"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -63,7 +63,7 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="Jadore.html">J'adore</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="MissDior.html">Miss Dior</a>
+                                <a class="dropdown-item" href="missdior.html">Miss Dior</a>
                             </div>
                         </li>
                         <li class="nav-item dropdown">
