--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <header>
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="#"><img src="picture/dior.png"></a>
+                <a class="navbar-brand" href="index.html"><img src="picture/dior.png"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
