--- a/allproduct.html
+++ b/allproduct.html
@@ -53,7 +53,7 @@
     <header>
         <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <a class="navbar-brand" href="index.html"><img src="/picture/dior.png"></a>
+                <a class="navbar-brand" href="#"><img src="/picture/dior.png"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -79,21 +79,21 @@
                                 男性香氛
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="./sauvage.html">Sauvage</a>
+                                <a class="dropdown-item" href="sauvage.html">Sauvage</a>
                                 <div class="dropdown-divider"></div>
                                 <a class="dropdown-item" href="homme.html">Dior Homme</a>
                             </div>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="allproduct.html" id="navbarDropdown" role="button"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    香氛簡介
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="allproduct.html#mark-1">Sauvage</a>
-                                    <a class="dropdown-item" href="allproduct.html#mark-2">Dior Homme</a>
-                                    <a class="dropdown-item" href="allproduct.html#mark-3">Miss Dior</a>
-                                    <a class="dropdown-item" href="allproduct.html#mark-4">J'adore</a>
-                            </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                香氛簡介
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="allproduct.html#mark1">J'adore</a>
+                                <a class="dropdown-item" href="#">Miss Dior</a>
+                                <a class="dropdown-item" href="#">Sauvage</a>
+                                <a class="dropdown-item" href="#">Dior Homme</a>
+                        </li>
                         <li class="nav-item" style="margin:0 7px">
                             <a class="nav-link" href="#">會員資料</a>
                         </li>
@@ -110,7 +110,9 @@
                         </button>
                         <a href=#><i class="far fa-heart"></i></a>
                         <a href=#><i class="fas fa-shopping-cart"></i></a>
-                        <a href=user.html><i class="fa-solid fa-user"></i></a>
+                        <a href=#><i class="fa-solid fa-user"></i></i></a>
+
+
                     </form>
                 </div>
             </nav>
@@ -120,8 +122,7 @@
     <div class="marquee">
         <span> 「PF. DIOR 6月活動」 滿$66,600享DIOR鑲鑽托特包; 全站$4,000免運，再享海洋度假香氛吊飾！</span>
     </div>
-    <hr>
-    <section id="mark-1" aria-label="item">
+    <section aria-label="item" id="mark-1">
         <div class="carousel" data-carousel>
             <button class="carousel-button next" data-carousel-button="prev" id="button_carousel">
                 &#8250;</button>
@@ -143,58 +144,80 @@
         </div>
     </section>
     <div class="introduce">      
-    <p><br>
-    Dior 迪奧在1966年推出Dior Sauvage，延續這款經典男香的精隨，2015年迪奧首席調香師 François推出全新香氛－SAUVAGE曠野之心淡香水，創作的曠野之心淡香水，是獻給大自然的歌頌，這款香氛的鉅作之美，來自於其原材料的珍世稀缺。獨一無二的卡拉布里亞佛手柑，其生長的土壤長期沐浴在卡拉布里亞的暖陽之下，透過迪奧與當地種植園區緊密合作，以最貼近自然古法的方式培育、摘採、嚴選萃取，結合長期專業知識，完美演繹卡拉布里亞佛手柑的香氣，精雕出屬於迪奧的男士香水，其靈感來自於在遼闊的原野上，炙熱的陽光加上藍色天空，一望無際的岩石，形成了一幅迷人而粗曠的景觀。
+    <p><br>Dior 迪奧在1966年推出Dior Sauvage，延續這款經典男香的精隨，2015年推出全新香氛－SAUVAGE曠野之心淡香水，靈感來自於在遼闊的原野上，炙熱的陽光加上藍色天空，一望無際的岩石，形成了一幅迷人而粗曠的景觀。由迪奧首席調香師Francois Demachy調製的 曠野之心男性淡香水展現出新鮮而高貴的氣息，並邀請好萊塢巨星強尼戴普擔任代言人，迷人而強大的氣場！
     </p>
     </div>
-    <section id="mark-2" aria-label="item">
+    <section aria-label="item" id="mark-2">
         <div class="carousel" data-carousel>
             <button class="carousel-button next" data-carousel-button="prev" id="button_carousel">
                 &#8250;</button>
             <button class="carousel-button prev" data-carousel-button="next"> &#8249;</button>
             <ul data-slides>
                 <li class="slide" data-active>
+                    <img src="picture/hommead1.webp" alt="">
+                </li>
+                <li class="slide">
+                    <img src="picture/hommead2.webp" alt="">
+                </li>
+                <li class="slide">
+                    <img src="picture/hommead1.webp" alt="">
+                </li>
+                <li class="slide">
                     <img src="picture/hommead2.webp" alt="">
                 </li>
             </ul>
         </div>
     </section>
     <div class="introduce">      
-    <p><br>全新Dior Homme由迪奧首席調香師Francois Demachy設計，他想重新定義男性的性感。 因此這款香水散發著木質、溫暖和性感的氣息，更有著鮮明的紳士魅力，同時散發溫柔氣息，展現都會男士的深度風采，而大西洋雪松的柔和氣息和羊絨木的溫暖散發出辛辣的香氣。
-    </p>
+    <p><br>全新Dior Homme由Dior調香師Francois Demachy設計，他想重新定義男性的性感。 這款香水散發著木質、溫暖和性感的氣息。 大西洋雪松的柔和氣息和羊絨木的溫暖散發出辛辣的香氣。 新的Dior Homme具有鮮明的男子氣概，並由「暮光男」羅伯派汀森代言，一上市就創下超高詢問度！    </p>
     </div>
-    <section id="mark-3" aria-label="item">
+    <section aria-label="item"  id="mark-3">
         <div class="carousel" data-carousel>
             <button class="carousel-button next" data-carousel-button="prev" id="button_carousel">
                 &#8250;</button>
             <button class="carousel-button prev" data-carousel-button="next"> &#8249;</button>
             <ul data-slides>
                 <li class="slide" data-active>
+                    <img src="picture/missdiorad1.webp" alt="">
+                </li>
+                <li class="slide">
+                    <img src="picture/missdiorad2.jpg" alt="">
+                </li>
+                <li class="slide">
                     <img src="picture/missdiorad3.jpg" alt="">
                 </li>
+                <li class="slide">
+                    <img src="picture/missdiorad4.jpg" alt="">
+                </li>
             </ul>
         </div>
     </section>
     <div class="introduce">      
-    <p><br>
-    全新Miss Dior Original是迪奧先生推出首款香氛，更是由迪奧首席調香師 François Demachy，更是以著漫舞玫瑰淡香水的香調核心--格拉斯玫瑰，調配出前衛的綠色花香蘚苔調掀起香水界的革命，象徵迪奧先生的完美創作。 經典版的Miss Dior 頂級香精是一款大膽的經典優雅香氛。極致高雅清新的白松香襯托出雙瓣茉莉以及五月玫瑰的花香中調，都是以手工悉心摘採，以保存格拉斯玫瑰的珍稀香氣印尼廣藿香香精則賦予香氛不羈的氣息。
-    </p>
+    <p><br>Miss Dior Original 是迪奧先生推出首款香氛，前衛的綠色花香蘚苔調掀起香水界的革命，象徵迪奧先生的完美創作。 經典版的Miss Dior 頂級香精是一款大膽的經典優雅香氛。 極致高雅清新的白松香襯托出雙瓣茉莉以及五月玫瑰的花香中調，印尼廣藿香香精則賦予香氛不羈的氣息。    </p>
     </div>
-    <section id="mark-4" aria-label="item">
+    <section aria-label="item" id="mark-4">
         <div class="carousel" data-carousel>
             <button class="carousel-button next" data-carousel-button="prev" id="button_carousel">
                 &#8250;</button>
             <button class="carousel-button prev" data-carousel-button="next"> &#8249;</button>
             <ul data-slides>
                 <li class="slide" data-active>
+                    <img src="picture/J'ADOREad1.webp" alt="">
+                </li>
+                <li class="slide">
                     <img src="picture/J'ADOREad2.webp" alt="">
+                </li>
+                <li class="slide">
+                    <img src="picture/J'ADOREad3.webp" alt="">
+                </li>
+                <li class="slide">
+                    <img src="picture/J'ADOREad4.jpg" alt="">
                 </li>
             </ul>
         </div>
     </section>
     <div class="introduce">      
-    <p><br>
-        Dior 在1999年推出了全新的華麗女性時尚香氛J'adore，迪奧首席調香師François Demachy將經典花香調幻化為前所未見的迷人作品，散發神秘謎樣氣息。J’adore創造出一朵在自然界不存在的理想花朵，更有著純淨、永恆的造型，為Dior的經典代表作品之一，高雅而迷人。細長的瓶頸，用金色的領巾圍了一周展現獨一無二的個性，更加顯得高貴不凡也流露出難以抵擋的醉人魅力。金碧輝煌的獨特瓶身設計，光滑透明沒有一點修飾，J'adore這幾個字母很美地隱藏在水晶瓶蓋上。很難用言語去形容J'adore的華麗與優雅，在忙碌的現代生活中。
+    <p><br>Dior 在1999年推出了全新的華麗女性時尚香氛J'adore純淨、永恆的造型，為Dior的經典代表作品之一，高雅而迷人。細長的瓶頸，用金色的領巾圍了一周，更加顯得高貴不凡。金碧輝煌的獨特瓶身設計，光滑透明沒有一點修飾，J'adore這幾個字母很美地隱藏在水晶瓶蓋上。很難用言語去形容J'adore的華麗與優雅，在忙碌的現代生活中，擁有一瓶很女人的香水也是一種享受！
     </p>
     </div>
     <button id="back-to-top-btn"><i class="fa-solid fa-angles-up"></i></button>
