--- a/about_us.html
+++ b/about_us.html
@@ -125,7 +125,7 @@
             <tr>
                 <td><br><img class="about" src="./picture/bokai.jpg"></td>
                 <td><br><img class="about" src="./picture/pohan.jpg"></td>
-                <td><br><img class="about" src="./picture/background.jpg"></td>
+                <td><br><img class="about" src="./picture/Jamin.jpg"></td>
                 <td><br><img class="about" src="./picture/background.jpg"></td>
             </tr>
             <tr>
@@ -140,9 +140,9 @@
                 </td>
             </tr>
             <tr>
-                <td class="size"></td>
+                <td class="size">我是王柏凱，興趣是打羽球和遊戲，平時也喜歡學習股市相關的知識，今年是我交易股市的第六年。</td>
                 <td class="size">大家好～我是一個喜歡舞台的人，不管是唱歌、演戲、主持···等等，只要是在舞台上，我都很喜歡。</td>
-                <td class="size">從大學新生入學加入機研社，一開始只是單純喜歡騎車，之後在學長的推薦下開始接觸賽車， 經過社團內的牽線，從一開始在場邊協助賽事錄影，到自己一頭栽進賽車裡，中間受到許多人的幫助與教導， 為了能夠下場花費無數的時間籌備裝備以及整備車輛，付出全力去練習，不厭其煩地在桃園四處的場地練習， 摔車了也不能氣餒要趕緊扶車站起來，即使受了無數的傷，花費大量時間精力跟金錢，也不能阻止我繼續在騎車這條路上走下去。 並且勇於去嘗試不一樣的事情。 </td>
+                <td class="size">我是一個喜歡騎車的女孩，任誰也無法阻止我繼續在騎車這條路上走下去，不過我會勇於去嘗試不一樣的事情。</td>
                 <td class="size"></td>
             </tr>
             <tr>
