--- a/allproduct.html
+++ b/allproduct.html
@@ -90,9 +90,9 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="allproduct.html#mark1">J'adore</a>
-                                <a class="dropdown-item" href="#">Miss Dior</a>
-                                <a class="dropdown-item" href="#">Sauvage</a>
-                                <a class="dropdown-item" href="#">Dior Homme</a>
+                                <a class="dropdown-item" href="allproduct.html#mark2">Miss Dior</a>
+                                <a class="dropdown-item" href="allproduct.html#mark3">Sauvage</a>
+                                <a class="dropdown-item" href="allproduct.html#mark4">Dior Homme</a>
                         </li>
                         <li class="nav-item" style="margin:0 7px">
                             <a class="nav-link" href="#">會員資料</a>
