--- a/Jadore.html
+++ b/Jadore.html
@@ -102,7 +102,7 @@
                             <i class="fas fa-search"></i>
                         </button>
                         <a href=#><i class="far fa-heart"></i></a>
-                        <a href=#><i class="fas fa-shopping-cart"></i></a>
+                        <a href=cart.html><i class="fas fa-shopping-cart"></i></a>
                         <a href=user.html><i class="fa-solid fa-user"></i></a>
                     </form>
                 </div>
