--- a/about_us.html
+++ b/about_us.html
@@ -126,7 +126,7 @@
                 <td><br><img class="about" src="./picture/bokai.jpg"></td>
                 <td><br><img class="about" src="./picture/pohan.jpg"></td>
                 <td><br><img class="about" src="./picture/Jamin.jpg"></td>
-                <td><br><img class="about" src="./picture/background.jpg"></td>
+                <td><br><img class="about" src="./picture/ting.jpg"></td>
             </tr>
             <tr>
                 <td><br><a href="https://wbk169.github.io/Bokai/boikai/personal.html">王柏凱</td>
@@ -143,7 +143,7 @@
                 <td class="size">我是王柏凱，興趣是打羽球和遊戲，平時也喜歡學習股市相關的知識，今年是我交易股市的第六年。</td>
                 <td class="size">大家好～我是一個喜歡舞台的人，不管是唱歌、演戲、主持···等等，只要是在舞台上，我都很喜歡。</td>
                 <td class="size">我是一個喜歡騎車的女孩，任誰也無法阻止我繼續在騎車這條路上走下去，不過我會勇於去嘗試不一樣的事情。</td>
-                <td class="size"></td>
+                <td class="size">大家好，我是張仲廷。</td>
             </tr>
         </table>
 
