--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     <a class="dropdown-item" href="allproduct.html#mark-4">J'adore</a>
                             </li>
                         <li class="nav-item" style="margin:0 7px">
-                            <a class="nav-link" href="#">會員資料</a>
+                            <a class="nav-link" href="member.html">會員資料</a>
                         </li>
                         <li class="nav-item" style="margin:0 7px">
                             <a class="nav-link" href="about_us.html">關於我們</a>
