--- a/user.html
+++ b/user.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Users</title>
     <link rel="stylesheet" href="css/user.css">
-    
+      <link rel="icon" href="./picture/PF.jpg" type="image/x-icon">
 </head>
 
 
