--- a/cart.html
+++ b/cart.html
@@ -40,7 +40,7 @@
         rel="stylesheet">
     <!--匯入GOOGLE FONT-->
       <link rel="icon" href="./picture/PF.jpg" type="image/x-icon">
-    <title>ALL</title>
+    <title>Cart</title>
 </head>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@700&display=swap');
