--- a/Jadore.html
+++ b/Jadore.html
@@ -31,7 +31,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@1,200&display=swap"
         rel="stylesheet">
     <!--匯入GOOGLE FONT-->
-      <link rel="icon" href="PF.jpg" type="image/x-icon">
+  <link rel="icon" href="./picture/PF.jpg" type="image/x-icon">
     <title>J'adore</title>
 </head>
 <style>
