--- a/product4.html
+++ b/product4.html
@@ -36,6 +36,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital,wght@1,200&display=swap"
         rel="stylesheet">
     <!--匯入GOOGLE FONT-->
+      <link rel="icon" href="./picture/PF.jpg" type="image/x-icon">
     <title>DIOR HOMME SPORT
     </title>
 </head>
