--- a/allproduct.html
+++ b/allproduct.html
@@ -155,7 +155,7 @@
             <button class="carousel-button prev" data-carousel-button="next"> &#8249;</button>
             <ul data-slides>
                 <li class="slide" data-active>
-                    <img src="picture/hommead1.webp" alt="">
+                    <img src="picture/hommead2.webp" alt="">
                 </li>
                 <li class="slide">
                     <img src="picture/hommead2.webp" alt="">
@@ -179,7 +179,7 @@
             <button class="carousel-button prev" data-carousel-button="next"> &#8249;</button>
             <ul data-slides>
                 <li class="slide" data-active>
-                    <img src="picture/missdiorad1.webp" alt="">
+                    <img src="picture/missdiorad3.jpg" alt="">
                 </li>
                 <li class="slide">
                     <img src="picture/missdiorad2.jpg" alt="">
@@ -203,7 +203,7 @@
             <button class="carousel-button prev" data-carousel-button="next"> &#8249;</button>
             <ul data-slides>
                 <li class="slide" data-active>
-                    <img src="picture/J'ADOREad1.webp" alt="">
+                    <img src="picture/J'ADOREad3.webp" alt="">
                 </li>
                 <li class="slide">
                     <img src="picture/J'ADOREad2.webp" alt="">
