--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
                     <figure class="bestseller_List">
                         <img src="picture/sauvage_top.jpg" />
                         <figcaption>
+                            <h3>Most Popular 1st</>
                             <h3>SAUVAGE ELIXIR</h3>
                             <h4>Elixir - spicy, fresh and woody notes</h4>
                         </figcaption>
@@ -152,9 +153,8 @@
                     <figure class="bestseller_List" style="margin-left: 10%;margin-right: 10%;">
                         <img src="picture/missdior_top.jpg" />
                         <figcaption>
-                            <h3>MISS DIOR ROSE ESSENCE
-
-                            </h3>
+                            <h3>Most Popular 2nd</h3>
+                            <h3>MISS DIOR ROSE ESSENCE</h3>
                             <h4>Eau de toilette - fresh, floral and woody notes
                             </h4>
                         </figcaption>
@@ -164,10 +164,9 @@
                     <figure class="bestseller_List">
                         <img src="picture/jadore_top.jpg" />
                         <figcaption>
-                            <h3>J'ADORE PARFUM INFINISSIME
-                            </h3>
-                            <h4>Eau de parfum - citrus, floral and woody notes
-                            </h4>
+                            <h3>Most Popular 3rd</h3>
+                            <h3>J'ADORE PARFUM INFINISSIME</h3>
+                            <h4>Eau de parfum - citrus, floral and woody notes</h4>
                         </figcaption>
                     </figure>
                 </a>
