--- a/allproduct.html
+++ b/allproduct.html
@@ -145,8 +145,11 @@
         </div>
     </section>
     <div class="introduce">      
-    <p><br>Dior 迪奧在1966年推出Dior Sauvage，延續這款經典男香的精隨，2015年推出全新香氛－SAUVAGE曠野之心淡香水，靈感來自於在遼闊的原野上，炙熱的陽光加上藍色天空，一望無際的岩石，形成了一幅迷人而粗曠的景觀。由迪奧首席調香師Francois Demachy調製的 曠野之心男性淡香水展現出新鮮而高貴的氣息，並邀請好萊塢巨星強尼戴普擔任代言人，迷人而強大的氣場！
-    </p>
+    <p><br>全新SAUVAGE曠野之心淬鍊香精是一款濃郁中不失細膩的香氛，延續曠野之心的經典清新香調，以辛香料的醉人氣息、頂級「訂製薰衣草精萃」承先啟後，牽引出基調的溫暖木質香調，打造出強大、高貴且迷人的全新香調。
+        迪奧首席調香師FRANÇOIS DEMACHY創造的SAUVAGE曠野之心淬鍊香精，宛如一杯特製的上等利口酒。最核心的香氣源自於珍稀的原材料萃取，如同曠野之境的血月，獨特且稀有。
+        SAUVAGE曠野之心淬鍊香精僅推出60ML一款尺寸，瓶身為深邃神秘的夜藍色，精巧瓶身帶有細緻設計：將帶有魔力的名字以亮銀色印製於瓶身標籤上，瓶底以細膩浮雕CD logo。
+        靛藍夜色籠罩大地，遼闊的原野杳無人跡，只聽見火堆燃燒的聲響，馥郁香氣裊裊昇起。迪奧首席調香師 François Demachy 以此為靈感，引領曠野之心來到全新層次：深刻繁複、令人沈醉的前調，獻給曠野無窮盡的魔法大地。
+        </p>
     </div>
     <section aria-label="item" id="mark-2">
         <div class="carousel" data-carousel>
@@ -170,7 +173,12 @@
         </div>
     </section>
     <div class="introduce">      
-    <p><br>全新Dior Homme由Dior調香師Francois Demachy設計，他想重新定義男性的性感。 這款香水散發著木質、溫暖和性感的氣息。 大西洋雪松的柔和氣息和羊絨木的溫暖散發出辛辣的香氣。 新的Dior Homme具有鮮明的男子氣概，並由「暮光男」羅伯派汀森代言，一上市就創下超高詢問度！    </p>
+    <p><br>Dior Homme淡香水，清新率性，散發令人難以抗拒的紳士魅力。 性感清新的木質調，層層包覆香氣，留下持久迷人的印象，刻畫Dior Homme男子的經典雅痞魅力。
+        全新的木質調重新定義了男性魅力，活力而優雅，兼具清新活潑的魅力，又隱約流露出迷人感性，像是突如其來的一記勾拳，直入心田。
+        其核心是溫柔的木質香氣，並以大西洋雪松的陽剛，擁抱喀什米爾森林的溫暖，讓這類淡香水留下性感率性的迷人印記。
+        甚至也有柑橘前調的款式，瞬間爆發出活力，立即留下鮮明印象，像是來到開闊的戶外般清新而充滿活力。
+        迪奧首席調香師為全新Dior Homme Sport增添溫暖的琥珀色澤，交織香料氣息，拉出神秘木質尾韻。Dior Homme Sport充滿自信的香氣足跡，以柔順高貴的質地，標記陽剛氣概的進化。
+        既撩撥清新與感性，亦明亮陽剛中帶性感的香氣留下令人難以忘懷的全新印象纏繞心頭。</p>
     </div>
     <section aria-label="item"  id="mark-3">
         <div class="carousel" data-carousel>
@@ -194,7 +202,12 @@
         </div>
     </section>
     <div class="introduce">      
-    <p><br>Miss Dior Original 是迪奧先生推出首款香氛，前衛的綠色花香蘚苔調掀起香水界的革命，象徵迪奧先生的完美創作。 經典版的Miss Dior 頂級香精是一款大膽的經典優雅香氛。 極致高雅清新的白松香襯托出雙瓣茉莉以及五月玫瑰的花香中調，印尼廣藿香香精則賦予香氛不羈的氣息。    </p>
+    <p><br>商品描述 全新MISS DIOR，前所未有的珍稀鉅獻。首款以年份珍藏的奢華香氛，滴滴萃取自馬儂花田盛放的五月玫瑰，全球限量發售。
+        延續迪奧於香水之都格拉斯的長期耕耘，從今開始，馬儂花田的五月玫瑰，將全數盡獻給MISS DIOR玫瑰珍釀香氛，以延續幾個世紀之久的萃取工藝，將五月玫瑰的動人芳香，提煉為滴滴純淨珍釀，萃取出珍稀玫瑰純露。
+        珍稀玫瑰純露靈感來自格拉斯當地的美麗傳說，由母親世代傳承給女兒的香氛秘密。從悉心採摘的玫瑰花瓣蒸餾出玫瑰純露，不僅為生活增添芬芳，更承載著愛與幸福的盼望。極珍稀的玫瑰純露注入香調核心，賦予更純淨澄澈的清新玫瑰香調。
+        以清新香甜花香前調開啟篇章，柔潤飽滿的玫瑰純露注入甜美五月玫瑰精萃，讓蜂蜜般甜美氣息交織著香根草、廣藿香與癒創木香調，包覆於木質底蘊，宛若大自然的純淨，讓感官完全沉浸於一望無際的玫瑰花海，翩然化做一場洋溢幸福香氣的感官饗宴。
+        而MISS DIOR玫瑰珍釀香氛更從內而外實踐了迪奧環保永續的承諾：瓶身以 25% 回收玻璃製成，輕盈而優雅。珍藏於環保紙盒中，紙盒以40%永續材質製成，更揉入15%玫瑰花瓣，直至最後一滴瓊漿，致敬大自然的餽贈。
+    </p>
     </div>
     <section aria-label="item" id="mark-4">
         <div class="carousel" data-carousel>
@@ -218,7 +231,13 @@
         </div>
     </section>
     <div class="introduce">      
-    <p><br>Dior 在1999年推出了全新的華麗女性時尚香氛J'adore純淨、永恆的造型，為Dior的經典代表作品之一，高雅而迷人。細長的瓶頸，用金色的領巾圍了一周，更加顯得高貴不凡。金碧輝煌的獨特瓶身設計，光滑透明沒有一點修飾，J'adore這幾個字母很美地隱藏在水晶瓶蓋上。很難用言語去形容J'adore的華麗與優雅，在忙碌的現代生活中，擁有一瓶很女人的香水也是一種享受！
+    <p><br>Dior 在1999年推出了全新的華麗女性時尚香氛J'adore純淨、永恆的造型，為Dior的經典代表作品之一，高雅而迷人。
+        細長的瓶頸，用金色的領巾圍了一周，更加顯得高貴不凡。
+        金碧輝煌的獨特瓶身設計，光滑透明沒有一點修飾，J'adore這幾個字母很美地隱藏在水晶瓶蓋上。
+        更是以馥郁奔放的花朵：格拉斯玫瑰、茉莉、依蘭依蘭，交織出一抹無限蔓延的香氣，並以帶有乳香氣息的檀香，點綴出木質香調，
+        最後一抹由迪奧獨家合作莊園栽種的格拉斯晚香玉，綻放明亮又令人沉醉的張力。
+        在忙碌的現代生活中，擁有一瓶很女人的J'adore華麗與優雅香水也是一種享受！
+        
     </p>
     </div>
     <button id="back-to-top-btn"><i class="fa-solid fa-angles-up"></i></button>
