--- a/product4.html
+++ b/product4.html
@@ -244,7 +244,7 @@
                                     <div>
                                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                             class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                            class="fas fa-star"></i>
+                                            class="fas fa-star"></i><p nowrap class="point-style">90&nbsp;分</p>
                                     </div>
                                 </div>
                                 <div class="comment">
@@ -252,20 +252,21 @@
                                     <div>
                                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                             class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                            class="fas fa-star"></i>
+                                            class="fas fa-star"></i><p nowrap class="point-style">85&nbsp;分</p>
                                     </div>
                                 </div>
                                 <div class="comment">
                                     <span>Albert：什麼狗屁味道。</span>
                                     <div>
-                                        <i class="fas fa-star"></i>
+                                        <i class="fas fa-star">
+                                        </i><p nowrap class="point-style">10&nbsp;分</p>
                                     </div>
                                 </div>
                                 <div class="comment">
                                     <span>Max：我喜歡。</span>
                                     <div>
                                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                            class="fas fa-star"></i><i class="fas fa-star"></i>
+                                            class="fas fa-star"></i><i class="fas fa-star"></i><p nowrap class="point-style">86&nbsp;分</p>
                                     </div>
                                 </div>
                                 <div class="comment">
@@ -273,17 +274,16 @@
                                     <div>
                                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i
                                             class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                            class="fas fa-star"></i>
+                                            class="fas fa-star"></i><p nowrap class="point-style">99&nbsp;分</p>
                                     </div>
                                 </div>
                                 <div class="comment">
                                     <span>Jack：我覺得還不錯哦。</span>
                                     <div>
                                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i
-                                            class="fas fa-star"></i>
+                                            class="fas fa-star"></i><p nowrap class="point-style">92&nbsp;分</p>
                                     </div>
                                 </div>
-
                             </div>
                         </div>
                     </div>
