--- a/product7.html
+++ b/product7.html
@@ -168,12 +168,24 @@
                         <div id="flush-collapseOne" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingOne">
                             <div class="details_product accordion-body">
-                                商品描述
                                 DIOR經典J'ADORE香氛系列，全新創作《J'ADORE極蘊香氛》，為包覆感官、充滿力量的性感花香氣。
 <br><br>
                                 以馥郁奔放的花朵：格拉斯玫瑰、茉莉、依蘭依蘭，交織出一抹無限蔓延的香氣，並以帶有乳香氣息的檀香，點綴出木質香調，最後一抹由迪奧獨家合作莊園栽種的格拉斯晚香玉，綻放明亮又令人沉醉的張力。
 <br><br>
-                                《J'ADORE極蘊香氛》是一款承襲經典J'ADORE香氛，卻又充滿驚喜的全新香氣，更加奔放誘人，綻放無盡魅力！</div>
+                                《J'ADORE極蘊香氛》是一款承襲經典J'ADORE香氛，卻又充滿驚喜的全新香氣，更加奔放誘人，綻放無盡魅力！
+                            <hr>
+                                在極蘊香氛的馥郁花香中，全新加入獨具一格的傳奇花朵「格拉斯晚香玉」。
+                                <br><br>
+                                晚香玉自1950年代開始於格拉斯地區逐漸凋零，DIOR香水世家則在當地大力支持著復育，並堅持以全世界只有「格拉斯晚香玉」採用的古老「脂吸法萃取技術」萃取珍稀原材料。
+                                <br><br>
+                                將花朵鋪平在塗有植物油脂的木框上，慢慢吸附花朵香氣。木框每24小時需更換一次，持續鋪上新鮮的晚香玉，直到萃取出香精為止。這項繁複的技術，能確保達到極高的產量，及最高品質的花香，打造絕無僅有的J'adore極蘊香氛。
+                                <hr>
+                                <p style="padding:0px 55px ;">
+                                    「這是J'adore與『格拉斯晚香玉』的浪漫邂逅，使《J'adore極蘊香氛》的動人香氣，瞬間綻放明亮又令人沉醉的張力。彷彿J'adore吸引著迷人的晚香玉，包覆、重塑、點亮它的香氣，是一抹能立即勾勒強大女性魅力的完美氣韻。」
+                                </p>
+
+
+                                <P style="text-align: center;">迪奧首席調香師François Demachy</P></div>
                         </div>
                     </div>
                     <div class="accordion-item">
