--- a/product8.html
+++ b/product8.html
@@ -169,6 +169,11 @@
                                 J'adore 淡香水是一款沐浴在金燦光芒中的香水。
 <br><br>
                                 燦爛的花束香調核心來自法國南部格拉斯瓦洛里地區的花中瑰寶格拉斯橙花。迪奧首席調香師 François Demachy把兒時於格拉斯回憶中的苦橙樹林化為香氣，更珍稀甜美。
+                            <hr>
+                           <p style="padding:0 55px;">J’adore是一款與眾不同的香氛，不僅流露出難以抵擋的醉人魅力，同時展現獨一無二的個性。
+                            香氣性感嫵媚，但又輕盈流暢。J’adore完美融合互相對立的元素，將經典花香調幻化為前所未見的迷人作品，散發神秘謎樣氣息。J’adore創造出一朵在自然界不存在的理想花朵。</p> 
+<br>
+<P style="text-align: center;">迪奧首席調香師François Demachy</P>
                             </div>
                         </div>
                     </div>
